--- a/web/src/index.css
+++ b/web/src/index.css
@@ -1,1 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Google+Sans+Flex:opsz,wght@6..144,1..1000&display=swap');
 @import "tailwindcss";
+
+body {
+  font-family: 'Google Sans Flex', sans-serif;
+}
